@@ -14,7 +14,6 @@ $DANCE_ROOT = "$ENV{'DANCE_ROOT'}";
 
 $daemons_running = 0;
 $em_running = 0;
-$ns_running = 0;
 
 $nr_daemon = 2;
 @ports = ( 60001, 60002 );
@@ -23,32 +22,27 @@ $nr_daemon = 2;
 @nodenames = ( "SenderNode", "ReceiverNode" );
 
 $status = 0;
-$cdp_file = "DeploymentPlan.cdp";
+$dat_file = "NodeManagerMap.cdd";
+$cdp_file = "DeploymentPlanDat.cdp";
 
 $controller_exec = "$CIAO_ROOT/tests/Thread/Sender/starter";
 
 # ior files other than daemon
-$ior_nsbase = "ns.ior";
-$ior_nsfile = 0;
 $ior_embase = "EM.ior";
 $ior_emfile = 0;
 
 #  Processes
 $E = 0;
 $EM = 0;
-$NS = 0;
 @DEAMONS = 0;
 
 # targets
 @tg_daemons = 0;
-$tg_naming = 0;
 $tg_exe_man = 0;
 $tg_executor = 0;
 
 sub create_targets {
-    #   naming service
-    $tg_naming = PerlACE::TestTarget::create_target (1) || die "Create target for ns failed\n";
-    $tg_naming->AddLibPath ('../lib');
+    #   no naming service
     #   daemon
     for ($i = 0; $i < $nr_daemon; ++$i) {
         $tg_daemons[$i] = PerlACE::TestTarget::create_target ($i+1) || die "Create target for daemon $i failed\n";
@@ -63,7 +57,6 @@ sub create_targets {
 }
 
 sub init_ior_files {
-    $ior_nsfile = $tg_naming->LocalFile ($ior_nsbase);
     $ior_emfile = $tg_exe_man->LocalFile ($ior_embase);
     for ($i = 0; $i < $nr_daemon; ++$i) {
         $iorfiles[$i] = $tg_daemons[$i]->LocalFile ($iorbases[$i]);
@@ -76,7 +69,6 @@ sub delete_ior_files {
     for ($i = 0; $i < $nr_daemon; ++$i) {
         $tg_daemons[$i]->DeleteFile ($iorbases[$i]);
     }
-    $tg_naming->DeleteFile ($ior_nsbase);
     $tg_exe_man->DeleteFile ($ior_embase);
     for ($i = 0; $i < $nr_daemon; ++$i) {
         $iorfiles[$i] = $tg_daemons[$i]->LocalFile ($iorbases[$i]);
@@ -99,10 +91,6 @@ sub kill_open_processes {
         $EM->TimedWait (1);
     }
 
-    if ($ns_running == 1) {
-        $NS->Kill ();
-        $NS->TimedWait (1);
-    }
     # in case shutdown did not perform as expected
     $tg_executor->KillAll ('dance_locality_manager');
 }
@@ -117,7 +105,8 @@ sub run_node_daemons {
         $node_app = $tg_daemons[$i]->GetArchDir("$DANCE_ROOT/bin/") . "dance_locality_manager";
 
         $d_cmd = "$DANCE_ROOT/bin/dance_node_manager";
-        $d_param = "-ORBEndpoint $iiop -s $node_app -n $nodename=$iorfile -t 30 --domain-nc corbaloc:rir:/NameService"; 
+        $d_param = "-ORBEndpoint $iiop -s $node_app -n $nodename=$iorfile -t 30";
+
         print "Run dance_node_manager with $d_param\n";
 
         $DEAMONS[$i] = $tg_daemons[$i]->CreateProcess ($d_cmd, $d_param);
@@ -139,30 +128,7 @@ sub run_node_daemons {
 create_targets ();
 init_ior_files ();
 
-# Invoke naming service
-
-$NS = $tg_naming->CreateProcess ("$TAO_ROOT/orbsvcs/Naming_Service/tao_cosnaming", "-m 0 -ORBEndpoint iiop://localhost:60003 -o $ior_nsfile");
-
-print STDERR "Starting Naming Service with -m 0 -ORBEndpoint iiop://localhost:60003 -o ns.ior\n";
-
-$ns_status = $NS->Spawn ();
-
-if ($ns_status != 0) {
-    print STDERR "ERROR: Unable to execute the naming service\n";
-    kill_open_processes ();
-    exit 1;
-}
-
-if ($tg_naming->WaitForFileTimed ($ior_nsbase,
-                                  $tg_naming->ProcessStartWaitInterval ()) == -1) {
-    print STDERR "ERROR: cannot find naming service IOR file\n";
-    $NS->Kill (); $NS->TimedWait (1);
-    exit 1;
-}
-
-$ns_running = 1;
-# Set up NamingService environment
-$ENV{"NameServiceIOR"} = "corbaloc:iiop:localhost:60003/NameService";
+# Don't use a  naming service
 
 # Invoke node daemon.
 print "Invoking node daemon\n";
@@ -179,8 +145,7 @@ $daemons_running = 1;
 # Invoke execution manager.
 print "Invoking execution manager (dance_execution_manager.exe) with -e$ior_emfile\n";
 $EM = $tg_exe_man->CreateProcess ("$DANCE_ROOT/bin/dance_execution_manager",
-                                    "-e$ior_emfile --domain-nc corbaloc:rir:/NameService");
-# --node-map $dat_file");
+                                    "-e$ior_emfile --cdd $dat_file");
 $EM->Spawn ();
 
 if ($tg_exe_man->WaitForFileTimed ($ior_embase,
