@@ -1,3 +1,14 @@
+Thu Oct 28 12:45:19 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>
+
+        * tests/Thread/descriptors/NodeManagerMap.dat:
+        * tests/Thread/descriptors/run_test.pl:
+        * tests/Thread/descriptors/run_test_dat.pl:
+        * tests/Thread/descriptors/NodeManagerMap.cdd:
+        * tests/Thread/descriptors/run_test_cdd.pl:
+        * tests/Thread/descriptors/DeploymentPlanDat.cdp:
+        Change test to run  with cdd file, dat file or naming service.      
+
+
 Thu Oct 28 10:47:19 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/dds4ccm/tests/LateBinding/UpdateWrite/Sender/WU_LateBinding_Sender_exec.h:
